# chess-bot

./: .gitignore  Cargo.toml
src/: display.rs  eval_engine.rs  game.rs  main.rs
src/eval_engine/: cache.rs
src/game/: magic_bb.rs  zobrists.rs
