[package]
name = "chess"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.32"
hashbrown = "0.17.1"
litchee = "0.1.0"
nohash-hasher = "0.2.0"
rand = "0.10.1"
ratatui = "0.30.1"
tokio = { version = "1.52.3", features = ["full"] }

[profile.release]
debug = true
